
- Added description attribute to Packages module. Thanks to https://github.com/oleksis
- Redesigned Automation module aka PowerUI and added categories section
- Fixed a UI bug that could cause the buttons in the Packages and Automation module to be hidden
- Redirected plugins link to ../ThisIsWin11/collections
- Added codename Ganymede to release
- Minor fixes


All changes can be viewed here: https://github.com/builtbybel/ThisIsWin11/releases/latest

From the blog:
You can still vote for the new design here
https://www.builtbybel.com/blog/19-apps/46-the-thisiswin11-navigation-bar-sucks